# InterProcessApp

./: CMakeLists.txt  CMakePresets.json  cmakeCommand.txt
EndPointComSo/: CMakeLists.txt  EndPointComSo.cpp  EndPointComSo.h
PipeComLaunch/: CMakeLists.txt  main_config.cpp  main_config.h  mainwindow.cpp  mainwindow.h
PipeComSo/: CMakeLists.txt  PipeComReadSo.cpp  PipeComReadSo.h  PipeComSo.cpp  PipeComSo.h  PipeComSo_config.cpp  PipeComSo_config.h  PipeComSo_interface.cpp  PipeComSo_interface.h  PipeComWriteSo.cpp  PipeComWriteSo.h
PythonBindings/: CMakeLists.txt  pipecom_py.cpp
python/: test_pipecom.py
